--- a/app/Resources/views/header/edit.html.twig
+++ b/app/Resources/views/header/edit.html.twig
@@ -23,14 +23,12 @@
                     </div>
 
                     <div class="center">
-                        <button class="btn-floating btn-large waves-effect waves-light green darken-1 modal-action modal-close"
-                                type="submit">
-                            <i class="material-icons">check</i>
+                        <button class="left" type="submit">
+                            <img src="{{ asset('images/local/icons/plus-icon.svg') }}" class="plus-icon">
                         </button>
 
-                        <a class="btn-floating btn-large waves-effect waves-light blue darken-1 modal-action modal-close"
-                           href="{{ path('homepage') }}">
-                            <i class="small material-icons">home</i>
+                        <a class="" href="{{ path('homepage') }}">
+                            <img src="{{ asset('images/local/icons/home-icon.svg') }}" class="plus-icon">
                         </a>
                     </div>
 
