--- a/app/Resources/views/header/new.html.twig
+++ b/app/Resources/views/header/new.html.twig
@@ -2,46 +2,64 @@
 
 {% block body %}
 
-    <div class="container">
-        <div class="header-marge">
-            <div class="row">
-                <div class="col s12">
+    {% if is_granted('ROLE_ADMIN') %}
 
-                    <div class="row">
-                        <h1 class="center">Ajout d'une nouvelle catégorie</h1>
-                    </div>
+        <div class="container">
+            <div class="header-marge">
+                <div class="row">
+                    <div class="col s12">
 
-                    {{ form_start(form) }}
-
-                    <div class="row">
-                        <div class="col s12 m6 l3">
-                            <p>Nom de la nouvelle catégorie :</p>
+                        <div class="row">
+                            <h1 class="center">Ajout d'une nouvelle catégorie</h1>
                         </div>
-                        <div class="col s12 m6 l3">
-                            {{ form_widget(form.name) }}
-                            {{ form_errors(form.name) }}
+
+                        {{ form_start(form) }}
+
+                        <div class="row">
+                            <div class="col s12 m6 l3">
+                                <p>Nom de la nouvelle catégorie :</p>
+                            </div>
+                            <div class="col s12 m6 l3">
+                                {{ form_widget(form.name) }}
+                                {{ form_errors(form.name) }}
+                            </div>
                         </div>
+
+                        <div class="center">
+                            <button class="btn-floating btn-large waves-effect waves-light green darken-1 modal-action modal-close"
+                                    type="submit">
+                                <i class="material-icons">check</i>
+                            </button>
+
+                            <a class="btn-floating btn-large waves-effect waves-light blue darken-1 modal-action modal-close"
+                               href="{{ path('homepage') }}">
+                                <i class="small material-icons">home</i>
+                            </a>
+                        </div>
+
+                        {{ form_end(form) }}
+
+                        <div class="header-buttom-marge"></div>
+
                     </div>
-
-                    <div class="center">
-                        <button class="btn-floating btn-large waves-effect waves-light green darken-1 modal-action modal-close"
-                                type="submit">
-                            <i class="material-icons">check</i>
-                        </button>
-
-                        <a class="btn-floating btn-large waves-effect waves-light blue darken-1 modal-action modal-close"
-                           href="{{ path('homepage') }}">
-                            <i class="small material-icons">home</i>
-                        </a>
-                    </div>
-
-                    {{ form_end(form) }}
-
-                    <div class="header-buttom-marge"></div>
-
                 </div>
             </div>
         </div>
-    </div>
+
+    {% else %}
+
+        <div class="container">
+            <div class="row center">
+                <div class="col s12">
+                    <img src="{{ asset('images/local/icons/warning-icon1.svg') }}" class="warning">
+                </div>
+                <div class="col s12">
+                    <h2 class="center-align">La page Que vous recherchez n'existe pas</h2>
+                </div>
+            </div>
+
+        </div>
+
+    {% endif %}
 
 {% endblock %}
