--- a/app/Resources/views/subgallery/index.html.twig
+++ b/app/Resources/views/subgallery/index.html.twig
@@ -2,31 +2,50 @@
 
 {% block body %}
 
-        <tbody>
-        {% for subGallery in subGalleries %}
-        {% if Gallery == subGallery.gallery %}
-            <tr>
-                <td><a href="{{ path('subgallery_show', { 'id': subGallery.id }) }}">{{ subGallery.id }}</a></td>
-                <td>{{ subGallery.sgallery }}</td>
-                <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('subgallery_show', { 'id': subGallery.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('subgallery_edit', { 'id': subGallery.id }) }}">edit</a>
-                        </li>
-                    </ul>
-                </td>
-            </tr>
-        {% endif %}
-        {% endfor %}
-        </tbody>
-    </table>
+    {% if is_granted('ROLE_ADMIN') %}
 
-    <ul>
-        <li>
-            <a href="{{ path('subgallery_new') }}">Create a new subGallery</a>
-        </li>
-    </ul>
+        <table>
+            <tbody>
+            {% for subGallery in subGalleries %}
+            {% if Gallery == subGallery.gallery %}
+                <tr>
+                    <td><a href="{{ path('subgallery_show', { 'id': subGallery.id }) }}">{{ subGallery.id }}</a></td>
+                    <td>{{ subGallery.sgallery }}</td>
+                    <td>
+                        <ul>
+                            <li>
+                                <a href="{{ path('subgallery_show', { 'id': subGallery.id }) }}">show</a>
+                            </li>
+                            <li>
+                                <a href="{{ path('subgallery_edit', { 'id': subGallery.id }) }}">edit</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            {% endif %}
+            {% endfor %}
+            </tbody>
+        </table>
+
+        <ul>
+            <li>
+                <a href="{{ path('subgallery_new') }}">Create a new subGallery</a>
+            </li>
+        </ul>
+
+    {% else %}
+
+        <div class="container">
+            <div class="row center">
+                <div class="col s12">
+                    <img src="{{ asset('images/local/icons/warning-icon1.svg') }}" class="warning">
+                </div>
+                <div class="col s12">
+                    <h2 class="center-align">La page Que vous recherchez n'existe pas</h2>
+                </div>
+            </div>
+
+        </div>
+
+    {% endif %}
 {% endblock %}
