--- a/app/Resources/views/subgallery/show.html.twig
+++ b/app/Resources/views/subgallery/show.html.twig
@@ -2,73 +2,91 @@
 
 {% block body %}
 
-    <div class="container">
-        <div class="header-marge">
-            <div class="row">
-                <div class="col s12">
+    {% if is_granted('ROLE_ADMIN') %}
 
-                    <div class="row">
-                        <h1 class="center">Résultat de l'enregistrement</h1>
+        <div class="container">
+            <div class="header-marge">
+                <div class="row">
+                    <div class="col s12">
+
+                        <div class="row">
+                            <h1 class="center">Résultat de l'enregistrement</h1>
+                        </div>
+
+                        <div class="row">
+                            <div class="col s12 m6 l3">
+                                <p>Nom du nouvel objet :</p>
+                            </div>
+                            <div class="col s12 m6 l3">
+                                <p >{{ subGallery.sgallery }}</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col s12 m6 l3">
+                                <p>Description du nouvel objet :</p>
+                            </div>
+                            <div class="col s12 m6 l3">
+                                <p >{{ subGallery.description }}</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col s12 m6 l3">
+                                <p>Prix du nouvel objet :</p>
+                            </div>
+                            <div class="col s12 m6 l3">
+                                <p >{{ subGallery.prix }}</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col s12 m6 l3">
+                                <p>Photo du nouvel objet :</p>
+                            </div>
+                            <div class="col s12 m6 l3">
+                                <img src="{{ asset( subGallery.media.picpath) }}" alt="{{ subGallery.media.picname }}" class="picsize">
+                            </div>
+                        </div>
+
+                        <div class="center">
+
+                            <a href="{{ path('header_show_all') }}">
+                                <button class=" btn-floating btn-large waves-effect tooltipped icon-background6" type="submit" name="action"
+                                        data-position="bottom"
+                                        data-delay="50"
+                                        data-tooltip="liste">
+                                    <i class="material-icons">view_list</i>
+                                </button>
+                            </a>
+
+                            <a class="btn-floating btn-large waves-effect waves-light blue darken-1"
+                               data-position="bottom"
+                               data-delay="50"
+                               data-tooltip="Accueil"
+                               href="{{ path('homepage') }}">
+                                <i class="small material-icons">home</i>
+                            </a>
+                        </div>
+
+                        <div class="header-buttom-marge"></div>
+
                     </div>
-
-                    <div class="row">
-                        <div class="col s12 m6 l3">
-                            <p>Nom du nouvel objet :</p>
-                        </div>
-                        <div class="col s12 m6 l3">
-                            <p >{{ subGallery.sgallery }}</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col s12 m6 l3">
-                            <p>Description du nouvel objet :</p>
-                        </div>
-                        <div class="col s12 m6 l3">
-                            <p >{{ subGallery.description }}</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col s12 m6 l3">
-                            <p>Prix du nouvel objet :</p>
-                        </div>
-                        <div class="col s12 m6 l3">
-                            <p >{{ subGallery.prix }}</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col s12 m6 l3">
-                            <p>Photo du nouvel objet :</p>
-                        </div>
-                        <div class="col s12 m6 l3">
-                            <img src="{{ asset( subGallery.media.picpath) }}" alt="{{ subGallery.media.picname }}" class="picsize">
-                        </div>
-                    </div>
-
-                    <div class="center">
-
-                        <a href="{{ path('header_show_all') }}">
-                            <button class=" btn-floating btn-large waves-effect tooltipped icon-background6" type="submit" name="action"
-                                    data-position="bottom"
-                                    data-delay="50"
-                                    data-tooltip="liste">
-                                <i class="material-icons">view_list</i>
-                            </button>
-                        </a>
-
-                        <a class="btn-floating btn-large waves-effect waves-light blue darken-1"
-                           data-position="bottom"
-                           data-delay="50"
-                           data-tooltip="Accueil"
-                           href="{{ path('homepage') }}">
-                            <i class="small material-icons">home</i>
-                        </a>
-                    </div>
-
-                    <div class="header-buttom-marge"></div>
-
                 </div>
             </div>
         </div>
-    </div>
+
+    {% else %}
+
+        <div class="container">
+            <div class="row center">
+                <div class="col s12">
+                    <img src="{{ asset('images/local/icons/warning-icon1.svg') }}" class="warning">
+                </div>
+                <div class="col s12">
+                    <h2 class="center-align">La page Que vous recherchez n'existe pas</h2>
+                </div>
+            </div>
+
+        </div>
+
+    {% endif %}
 
 {% endblock %}
