--- a/src/CalendarBundle/Resources/views/agenda/edit.html.twig
+++ b/src/CalendarBundle/Resources/views/agenda/edit.html.twig
@@ -2,135 +2,153 @@
 
 {% block body %}
 
-    <div class="container">
-        <div class="row">
-            <div class="col s12 center">
-                <h2 class="soustitrePage">Edition de l'évènement</h2>
-                <h4 class="soustitrePage">{{ agenda.titre }}</h4>
+    {% if is_granted('ROLE_ADMIN') %}
+
+        <div class="container">
+            <div class="row">
+                <div class="col s12 center">
+                    <h2 class="soustitrePage">Edition de l'évènement</h2>
+                    <h4 class="soustitrePage">{{ agenda.titre }}</h4>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="container center">
-        <div class="row">
-            <div class="col s12">
+        <div class="container center">
+            <div class="row">
+                <div class="col s12">
 
-                {{ form_start(edit_form) }}
+                    {{ form_start(edit_form) }}
 
-                <div class="calendar-responsive-table">
-                    <div class="row calendar-row valign-wrapper">
-                        <div class="col s12 m6 l6 calendar-td valign-wrapper">
-                            <p class="calendar-p valign">Titre de l'évènement :<span class="asterix">*</span></p>
+                    <div class="calendar-responsive-table">
+                        <div class="row calendar-row valign-wrapper">
+                            <div class="col s12 m6 l6 calendar-td valign-wrapper">
+                                <p class="calendar-p valign">Titre de l'évènement :<span class="asterix">*</span></p>
+                            </div>
+                            <div class="col s12 m6 l6">
+                                {{ form_widget(edit_form.titre, { 'attr': {'class': 'calendar-responsive-input'} }) }}
+                                {{ form_errors(edit_form.titre) }}
+                            </div>
                         </div>
-                        <div class="col s12 m6 l6">
-                            {{ form_widget(edit_form.titre, { 'attr': {'class': 'calendar-responsive-input'} }) }}
-                            {{ form_errors(edit_form.titre) }}
+                        <div class="row calendar-row valign-wrapper">
+                            <div class="col s12 m6 l6 calendar-td valign-wrapper">
+                                <p class="calendar-p valign">Date et heure de début :<span class="asterix">*</span></p>
+                            </div>
+                            <div class="col s12 m6 l6">
+                                {{ form_widget(edit_form.start, { 'attr': {'class': 'calendar-responsive-input center'} }) }}
+                                {{ form_errors(edit_form.start) }}
+                            </div>
                         </div>
-                    </div>
-                    <div class="row calendar-row valign-wrapper">
-                        <div class="col s12 m6 l6 calendar-td valign-wrapper">
-                            <p class="calendar-p valign">Date et heure de début :<span class="asterix">*</span></p>
+                        <div class="row calendar-row valign-wrapper">
+                            <div class="col s12 m6 l6 calendar-td valign-wrapper">
+                                <p class="calendar-p valign">Date et heure de fin :<span class="asterix">*</span></p>
+                            </div>
+                            <div class="col s12 m6 l6">
+                                {{ form_widget(edit_form.end, { 'attr': {'class': 'calendar-responsive-input center'} }) }}
+                                {{ form_errors(edit_form.end) }}
+                            </div>
                         </div>
-                        <div class="col s12 m6 l6">
-                            {{ form_widget(edit_form.start, { 'attr': {'class': 'calendar-responsive-input center'} }) }}
-                            {{ form_errors(edit_form.start) }}
+                        <div class="row calendar-row valign-wrapper">
+                            <div class="col s12 m6 l6 calendar-td valign-wrapper">
+                                <p class="calendar-p valign">Description de l'évènement :<span class="asterix">*</span></p>
+                            </div>
+                            <div class="col s12 m6 l6">
+                                {{ form_widget(edit_form.texte, { 'id': 'textarea' }, { 'attr': {'col': '100'} }) }}
+                                {{ form_errors(edit_form.texte) }}
+                            </div>
                         </div>
-                    </div>
-                    <div class="row calendar-row valign-wrapper">
-                        <div class="col s12 m6 l6 calendar-td valign-wrapper">
-                            <p class="calendar-p valign">Date et heure de fin :<span class="asterix">*</span></p>
+                        <div class="row calendar-row valign-wrapper">
+                            <div class="col s12 m6 l6 calendar-td valign-wrapper">
+                                <p class="calendar-p valign">Lieu de l'évènemen :<span class="asterix">*</span></p>
+                            </div>
+                            <div class="col s12 m6 l6">
+                                {{ form_widget(edit_form.lieu, { 'attr': {'class': 'calendar-responsive-input'} }) }}
+                                {{ form_errors(edit_form.lieu) }}
+                            </div>
                         </div>
-                        <div class="col s12 m6 l6">
-                            {{ form_widget(edit_form.end, { 'attr': {'class': 'calendar-responsive-input center'} }) }}
-                            {{ form_errors(edit_form.end) }}
-                        </div>
-                    </div>
-                    <div class="row calendar-row valign-wrapper">
-                        <div class="col s12 m6 l6 calendar-td valign-wrapper">
-                            <p class="calendar-p valign">Description de l'évènement :<span class="asterix">*</span></p>
-                        </div>
-                        <div class="col s12 m6 l6">
-                            {{ form_widget(edit_form.texte, { 'id': 'textarea' }, { 'attr': {'col': '100'} }) }}
-                            {{ form_errors(edit_form.texte) }}
-                        </div>
-                    </div>
-                    <div class="row calendar-row valign-wrapper">
-                        <div class="col s12 m6 l6 calendar-td valign-wrapper">
-                            <p class="calendar-p valign">Lieu de l'évènemen :<span class="asterix">*</span></p>
-                        </div>
-                        <div class="col s12 m6 l6">
-                            {{ form_widget(edit_form.lieu, { 'attr': {'class': 'calendar-responsive-input'} }) }}
-                            {{ form_errors(edit_form.lieu) }}
-                        </div>
-                    </div>
-                    <div class="row calendar-row valign-wrapper">
-                        <div class="col s12 m6 l6 calendar-td valign-wrapper">
-                            <p class="calendar-p valign">Couleur de l'évènement :</p>
-                        </div>
-                        <div class="col s12 m6 l6 valign-wrapper">
-                            <div class="row valign-wrapper">
-                                <div class="col s12 m6 l6 center">
-                                        {{ form_widget(edit_form.color , { 'id': 'colorpicker' }) }}
-                                        {{ form_errors(edit_form.color) }}
-                                    <div  style="background-color: {{ agenda.color }};" class="col s12 m6 l6 center calendar-div-size"></div>
+                        <div class="row calendar-row valign-wrapper">
+                            <div class="col s12 m6 l6 calendar-td valign-wrapper">
+                                <p class="calendar-p valign">Couleur de l'évènement :</p>
+                            </div>
+                            <div class="col s12 m6 l6 valign-wrapper">
+                                <div class="row valign-wrapper">
+                                    <div class="col s12 m6 l6 center">
+                                            {{ form_widget(edit_form.color , { 'id': 'colorpicker' }) }}
+                                            {{ form_errors(edit_form.color) }}
+                                        <div  style="background-color: {{ agenda.color }};" class="col s12 m6 l6 center calendar-div-size"></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
+                        <div class="row calendar-row valign-wrapper">
+                            <div class="col s12 m6 l6 calendar-td valign-wrapper">
+                                <p class="calendar-p valign">Ajouter au slider :</p>
+                            </div>
+                            <div class="col s12 m6 l6">
+                                {{ form_widget(edit_form.slider, { 'id': 'test5' }, { 'attr': {'class': 'calendar-responsive-input'} }) }}
+                                {{ form_errors(edit_form.slider) }}
+                            </div>
+                        </div>
+                        <div class="row upload_file_event calendar-row valign-wrapper">
+                            <div class="col s12 m6 l6 calendar-td valign-wrapper">
+                                <p class="calendar-p valign">Ajouter une image (Max : 2Mo) :</p>
+                            </div>
+                            <div class="col s12 m6 l6">
+                                {{ form_widget(edit_form.image, { 'attr': {'class': 'calendar-responsive-input'} }) }}
+                                {{ form_errors(edit_form.image) }}
+                            </div>
+                        </div>
+                        <div class="row upload_file_event calendar-row valign-wrapper">
+                            <div class="col s12 m6 l6 calendar-td valign-wrapper">
+                                <p class="calendar-p valign">Ajouter une un lien à l'image :</p>
+                            </div>
+                            <div class="col s12 m6 l6">
+                                {{ form_widget(edit_form.lien, { 'id': 'textarea' }, { 'attr': {'col': '100'} }) }}
+                                {{ form_errors(edit_form.lien) }}
+                            </div>
+                        </div>
                     </div>
-                    <div class="row calendar-row valign-wrapper">
-                        <div class="col s12 m6 l6 calendar-td valign-wrapper">
-                            <p class="calendar-p valign">Ajouter au slider :</p>
-                        </div>
-                        <div class="col s12 m6 l6">
-                            {{ form_widget(edit_form.slider, { 'id': 'test5' }, { 'attr': {'class': 'calendar-responsive-input'} }) }}
-                            {{ form_errors(edit_form.slider) }}
-                        </div>
-                    </div>
-                    <div class="row upload_file_event calendar-row valign-wrapper">
-                        <div class="col s12 m6 l6 calendar-td valign-wrapper">
-                            <p class="calendar-p valign">Ajouter une image (Max : 2Mo) :</p>
-                        </div>
-                        <div class="col s12 m6 l6">
-                            {{ form_widget(edit_form.image, { 'attr': {'class': 'calendar-responsive-input'} }) }}
-                            {{ form_errors(edit_form.image) }}
-                        </div>
-                    </div>
-                    <div class="row upload_file_event calendar-row valign-wrapper">
-                        <div class="col s12 m6 l6 calendar-td valign-wrapper">
-                            <p class="calendar-p valign">Ajouter une un lien à l'image :</p>
-                        </div>
-                        <div class="col s12 m6 l6">
-                            {{ form_widget(edit_form.lien, { 'id': 'textarea' }, { 'attr': {'col': '100'} }) }}
-                            {{ form_errors(edit_form.lien) }}
-                        </div>
-                    </div>
-                </div>
 
-                <div class="center">
-                    <button class="btn-floating btn-large waves-effect waves-light orange darken-1 modal-action modal-close"
-                            type="submit">
-                        <i class="material-icons">edit</i>
-                    </button>
-
-                    <a href="{{ path('agenda_show_all') }}">
-                        <button class=" btn-floating btn-large waves-effect tooltipped icon-background6" type="submit" name="action"
-                                data-position="bottom"
-                                data-delay="50"
-                                data-tooltip="Accueil">
-                            <i class="material-icons">view_list</i>
+                    <div class="center">
+                        <button class="btn-floating btn-large waves-effect waves-light orange darken-1 modal-action modal-close"
+                                type="submit">
+                            <i class="material-icons">edit</i>
                         </button>
-                    </a>
 
-                    <a class="btn-floating btn-large waves-effect waves-light blue darken-1 modal-action modal-close"
-                       href="{{ path('plate_forme_homepage') }}">
-                        <i class="small material-icons">view_list</i>
-                    </a>
+                        <a href="{{ path('agenda_show_all') }}">
+                            <button class=" btn-floating btn-large waves-effect tooltipped icon-background6" type="submit" name="action"
+                                    data-position="bottom"
+                                    data-delay="50"
+                                    data-tooltip="Accueil">
+                                <i class="material-icons">view_list</i>
+                            </button>
+                        </a>
+
+                        <a class="btn-floating btn-large waves-effect waves-light blue darken-1 modal-action modal-close"
+                           href="{{ path('plate_forme_homepage') }}">
+                            <i class="small material-icons">view_list</i>
+                        </a>
+                    </div>
+
+                    {{ form_end(edit_form) }}
+
                 </div>
-
-                {{ form_end(edit_form) }}
-
             </div>
         </div>
-    </div>
+
+    {% else %}
+
+        <div class="container">
+            <div class="row center">
+                <div class="col s12">
+                    <img src="{{ asset('images/local/icons/warning-icon1.svg') }}" class="warning">
+                </div>
+                <div class="col s12">
+                    <h2 class="center-align">La page Que vous recherchez n'existe pas</h2>
+                </div>
+            </div>
+
+        </div>
+
+    {% endif %}
 
 {% endblock %}
