--- a/src/CalendarBundle/Resources/views/agenda/show_all.html.twig
+++ b/src/CalendarBundle/Resources/views/agenda/show_all.html.twig
@@ -1,76 +1,84 @@
 {% extends 'layout.html.twig' %}
 {% block body %}
 
-    <div class="container center" id="user_list_model">
+    {% if is_granted('ROLE_ADMIN') %}
 
-        <h2>Liste des évènements</h2>
-        {#<div class="boutons-haut">#}
-            {#<a href="{{ path('homepage') }}">#}
-                {#<button class="user btn-floating btn-large waves-effect tooltipped icon-background6" type="submit" name="action"#}
-                        {#data-position="bottom"#}
-                        {#data-delay="50"#}
-                        {#data-tooltip="Accueil">#}
-                    {#<i class="material-icons">home</i>#}
-                {#</button>#}
-            {#</a>#}
-        {#</div>#}
+        <div class="container center" id="user_list_model">
 
-        <table class="responsive-table bordered striped" id="table_id">
-            <thead>
-            <tr>
-                <th>id</th>
-                <th>Titre</th>
-                <th>Dates</th>
-                <th>Contenu</th>
-                <th>Slider</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for event in events %}
+            <h2>Liste des évènements</h2>
+
+            <table class="responsive-table bordered striped" id="table_id">
+                <thead>
                 <tr>
-                    <td>{{ event.id }}</td>
-                    <td>{{ event.titre }}</td>
-                    <td><div class="row">
-                            <div class="col s12">Début : {% if event.start %}{{ event.start|date('d-m-Y à H:i:s') }}{% endif %}</div>
-                            <div class="col s12">Fin : {% if event.end %}{{ event.end|date('d-m-Y à H:i:s') }}{% endif %}</div>
-                        </div>
-                    </td>
-                    <td>{{ event.texte }}</td>
-                    {#<td>{% if event.slider %}Evènement ajouté{% else %}Evènement non ajouté{% endif %}</td>#}
-
-                    <td class="boutons_user">
-                        <div class="boutons">
-                            <a href="{{ path('agenda_show', { 'id': event.id }) }}">
-                                <button class="user btn-floating btn-large waves-effect tooltipped icon-background4" type="submit" name="action"
-                                        data-position="bottom"
-                                        data-delay="50"
-                                        data-tooltip="Afficher">
-                                    <i class="material-icons">remove_red_eye</i>
-                                </button>
-                            </a>
-                            <a href="{{ path('agenda_edit', { 'id': event.id }) }}">
-                                <button class="user btn-floating btn-large waves-effect tooltipped icon-background4" type="submit" name="action"
-                                        data-position="bottom"
-                                        data-delay="50"
-                                        data-tooltip="Editer">
-                                    <i class="material-icons">edit</i>
-                                </button>
-                            </a>
-                            <a href="{{ path('agenda_delete', {'id': event.id})}}">
-                                <button class="user btn-floating btn-large waves-effect tooltipped icon-background4" type="submit" name="action"
-                                        data-position="bottom"
-                                        data-delay="50"
-                                        data-tooltip="supprimer">
-                                    <i class="material-icons">lock_outline</i>
-                                </button>
-                            </a>
-                        </div>
-                    </td>
+                    <th>id</th>
+                    <th>Titre</th>
+                    <th>Dates</th>
+                    <th>Contenu</th>
+                    <th>Slider</th>
                 </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-    </div>
+                </thead>
+                <tbody>
+                {% for event in events %}
+                    <tr>
+                        <td>{{ event.id }}</td>
+                        <td>{{ event.titre }}</td>
+                        <td><div class="row">
+                                <div class="col s12">Début : {% if event.start %}{{ event.start|date('d-m-Y à H:i:s') }}{% endif %}</div>
+                                <div class="col s12">Fin : {% if event.end %}{{ event.end|date('d-m-Y à H:i:s') }}{% endif %}</div>
+                            </div>
+                        </td>
+                        <td>{{ event.texte }}</td>
+                        {#<td>{% if event.slider %}Evènement ajouté{% else %}Evènement non ajouté{% endif %}</td>#}
+
+                        <td class="boutons_user">
+                            <div class="boutons">
+                                <a href="{{ path('agenda_show', { 'id': event.id }) }}">
+                                    <button class="user btn-floating btn-large waves-effect tooltipped icon-background4" type="submit" name="action"
+                                            data-position="bottom"
+                                            data-delay="50"
+                                            data-tooltip="Afficher">
+                                        <i class="material-icons">remove_red_eye</i>
+                                    </button>
+                                </a>
+                                <a href="{{ path('agenda_edit', { 'id': event.id }) }}">
+                                    <button class="user btn-floating btn-large waves-effect tooltipped icon-background4" type="submit" name="action"
+                                            data-position="bottom"
+                                            data-delay="50"
+                                            data-tooltip="Editer">
+                                        <i class="material-icons">edit</i>
+                                    </button>
+                                </a>
+                                <a href="{{ path('agenda_delete', {'id': event.id})}}">
+                                    <button class="user btn-floating btn-large waves-effect tooltipped icon-background4" type="submit" name="action"
+                                            data-position="bottom"
+                                            data-delay="50"
+                                            data-tooltip="supprimer">
+                                        <i class="material-icons">lock_outline</i>
+                                    </button>
+                                </a>
+                            </div>
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+
+    {% else %}
+
+        <div class="container">
+            <div class="row center">
+                <div class="col s12">
+                    <img src="{{ asset('images/local/icons/warning-icon1.svg') }}" class="warning">
+                </div>
+                <div class="col s12">
+                    <h2 class="center-align">La page Que vous recherchez n'existe pas</h2>
+                </div>
+            </div>
+
+        </div>
+
+    {% endif %}
 {% endblock %}
 
 {% block javascripts %}
