--- a/web/css/main.css
+++ b/web/css/main.css
@@ -67,6 +67,7 @@
 
 input{
     width: 300px !important;
+    opacity: 1 !important;
 }
 
 p{
@@ -84,110 +85,132 @@ p{
     height: 25px;
 }
 
+.warning{
 
-    /*******************************************************/
-    /*                                                     */
-    /*                                                     */
-    /*                   LAYOUT                            */
-    /*                                                     */
-    /*                                                     */
-    /*******************************************************/
-    /*******************************************************/
-    /*******************************************************/
-    /************************ NAV BAR **********************/
-    /*******************************************************/
-    /*******************************************************/
-    .decal {
-        margin-left: 30px;
-    }
+    width: 350px;
+    height: 250px;
 
-    .fsize {
-        font-size: 15px;
-        font-family: 'Dancing Script', cursive;
-    }
+}
 
-    .backnav, .backfoot {
-        background-color: black !important;
-    }
+/*.checksize{*/
+    /*margin-top: 30px !important;*/
+    /*width: 200px !important;*/
+/*}*/
 
-    /* Extension TITRE */
-    .backcontent {
-        background-color: #546e7a !important;
-    }
+#test5{
+    margin-top: 10px !important;
+    width: 30px !important;
+    height: 30px;
+}
 
-    .navbutton {
-        background-color: black;
-        border-color: #546e7a;
-    }
+button{
+    border: none;
+    background: none;
+}
 
-    .navbutton:hover {
-        background-color: #546e7a;
-    }
+/*******************************************************/
+/*                                                     */
+/*                                                     */
+/*                   LAYOUT                            */
+/*                                                     */
+/*                                                     */
+/*******************************************************/
+/*******************************************************/
+/*******************************************************/
+/************************ NAV BAR **********************/
+/*******************************************************/
+/*******************************************************/
+.decal {
+    margin-left: 30px;
+}
 
-    .f-size {
-        font-size: 70px !important;
-        color: white;
-    }
-    .bouton-new-gallery{
-         width: 30px !important;
-         height: 30px !important;
-     }
-    .bouton-new-gallery-icon{
-        margin-top: -12px;
-    }
+.fsize {
+    font-size: 15px;
+    font-family: 'Dancing Script', cursive;
+}
 
-    .material-icons-size{
-        margin-left: 40px !important;
-        font-size: 40px !important;
-    }
+.backnav, .backfoot {
+    background-color: black !important;
+}
 
-    .marginright{
-        margin-right: 7%;
-    }
+/* Extension TITRE */
+.backcontent {
+    background-color: #546e7a !important;
+}
 
-    /*******************************************************/
-    /*******************************************************/
-    /************************ FOOTER ***********************/
-    /*******************************************************/
-    /*******************************************************/
-    body {
-        display: flex;
-        min-height: 100vh;
-        flex-direction: column;
-        font-family: 'Dancing Script', cursive;
-    }
+.navbutton {
+    background-color: black;
+    border-color: #546e7a;
+}
 
-    main {
-        flex: 1 0 auto;
-    }
+.navbutton:hover {
+    background-color: #546e7a;
+}
 
-    /*******************************************************/
-    /*                                                     */
-    /*                                                     */
-    /*                     ACCUEIL                         */
-    /*                                                     */
-    /*                                                     */
-    /*******************************************************/
-    /*******************************************************/
-    /*******************************************************/
-    /*********************** CAROUSEL **********************/
-    /*******************************************************/
-    /*******************************************************/
-    .marge {
-        margin-top: 94px;
-    }
+.f-size {
+    font-size: 70px !important;
+    color: white;
+}
+.bouton-new-gallery{
+     width: 30px !important;
+     height: 30px !important;
+ }
+.bouton-new-gallery-icon{
+    margin-top: -12px;
+}
 
-    /*******************************************************/
-    /*******************************************************/
-    /********************* CARD ABOUT **********************/
-    /*******************************************************/
-    /*******************************************************/
-    .card-size {
-        margin-top: 40px;
-        -moz-box-shadow: 8px 8px 12px #aaa;
-        -webkit-box-shadow: 8px 8px 12px #aaa;
-        box-shadow: 8px 8px 12px #555;
-    }
+.material-icons-size{
+    margin-left: 40px !important;
+    font-size: 40px !important;
+}
+
+.marginright{
+    margin-right: 7%;
+}
+
+/*******************************************************/
+/*******************************************************/
+/************************ FOOTER ***********************/
+/*******************************************************/
+/*******************************************************/
+body {
+    display: flex !important;
+    min-height: 100vh !important;
+    flex-direction: column !important;
+    font-family: 'Dancing Script', cursive !important;
+}
+
+main {
+    flex: 1 0 auto !important;
+}
+
+/*******************************************************/
+/*                                                     */
+/*                                                     */
+/*                     ACCUEIL                         */
+/*                                                     */
+/*                                                     */
+/*******************************************************/
+/*******************************************************/
+/*******************************************************/
+/*********************** CAROUSEL **********************/
+/*******************************************************/
+/*******************************************************/
+.marge {
+    margin-top: 94px;
+}
+
+/*******************************************************/
+/*******************************************************/
+/********************* CARD ABOUT **********************/
+/*******************************************************/
+/*******************************************************/
+.card-size {
+    margin-top: 40px;
+    -moz-box-shadow: 8px 8px 12px #aaa;
+    -webkit-box-shadow: 8px 8px 12px #aaa;
+    box-shadow: 8px 8px 12px #555;
+}
 
 /*******************************************************/
 /*                                                     */
