--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -14,11 +14,12 @@
             {% for subGallery in subGalleries %}
 
                 <li>
-                    {% if suGallery.media.picpath != null %}
+                    {% if subGallery.media != null %}
                         <img src="{{ asset(subGallery.media.picpath) }}" alt="{{ subGallery.media.picname }}"/>
                     {% endif %}
                     <div class="caption center-align">
-                        <h3>{{ subGallery.sgallery }}</h3>
+                        <h3 class="font-slide">{{ subGallery.sgallery }}</h3>
+                        <h5 class="font-slide">{{ subGallery.gallery }}</h5>
                     </div>
                 </li>
 
@@ -36,7 +37,7 @@
 
                 <div class="row">
                     <div class="col s12 m6 l6 ">
-                        <h4 class="">A propos de moi</h4>
+                        <h4 class="">Je me présente</h4>
                     </div>
                 </div>
 
@@ -55,6 +56,11 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="center">
+                    <a href="{{ path('about_index') }}">
+                        <img src="{{ asset('images/local/icons/menu-icon.svg') }}" class="plus-icon">
+                    </a>
                 </div>
 
             </div>
