--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -45,14 +45,18 @@
                     <div class="col">
                         <div class="card card-size">
                             <div class="card-image waves-effect waves-block waves-light">
-                                <img class="activator" src="https://lorempixel.com/800/400/food/4">
+                                {% for about in abouts %}
+                                    <img class="activator" src="{{ asset(about.media.picpath) }}" alt="{{ about.media.picname }}">
+                                {% endfor %}
                             </div>
                             <div class="card-content">
-                                <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+                                <span class="card-title activator grey-text text-darken-4"><i class="material-icons right">more_vert</i></span>
                             </div>
                             <div class="card-reveal">
-                                <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                                <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                                <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                                {% for about in abouts %}
+                                <p>{{ about.about }}</p>
+                                {% endfor %}
                             </div>
                         </div>
                     </div>
