--- a/web/css/main.css
+++ b/web/css/main.css
@@ -107,6 +107,10 @@ button{
     color: #546e7a;
 }
 
+.font-href-foot{
+    color: white;
+}
+
 /*******************************************************/
 /*                                                     */
 /*                                                     */
