--- a/app/Resources/views/partner/new.html.twig
+++ b/app/Resources/views/partner/new.html.twig
@@ -1,16 +1,74 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout.html.twig' %}
 
 {% block body %}
-    <h1>Partner creation</h1>
 
-    {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Create" />
-    {{ form_end(form) }}
+    {% if is_granted('ROLE_ADMIN') %}
 
-    <ul>
-        <li>
-            <a href="{{ path('partner_index') }}">Back to the list</a>
-        </li>
-    </ul>
+        <div class="container">
+            <div class="header-marge">
+                <div class="row">
+                    <div class="col s12">
+
+                        <div class="row">
+                            <h1 class="center">Nouveau partenaire</h1>
+                        </div>
+
+                        {{ form_start(form) }}
+
+                        <div class="row">
+                            <div class="col s12 m6 l3">
+                                <p>Nom du partenaire</p>
+                            </div>
+                            <div class="col s12 m6 l3">
+                                {{ form_widget(form.partner) }}
+                                {{ form_errors(form.partner) }}
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col s12 m6 l3">
+                                <p>Site Web du partenaire</p>
+                            </div>
+                            <div class="col s12 m6 l3">
+                                {{ form_widget(form.mail) }}
+                                {{ form_errors(form.mail) }}
+                            </div>
+                        </div>
+
+                        <div class="center">
+                            <div class="col s12 center">
+                                <button class="left" type="submit">
+                                    <img src="{{ asset('images/local/icons/plus-icon.svg') }}" class="plus-icon">
+                                </button>
+
+                                <a class="" href="{{ path('partner_index') }}">
+                                    <img src="{{ asset('images/local/icons/home-icon.svg') }}" class="plus-icon">
+                                </a>
+                            </div>
+
+                            {{ form_end(form) }}
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    {% else %}
+
+        <div class="container">
+            <div class="row center">
+                <div class="col s12">
+                    <img src="{{ asset('images/local/icons/warning-icon1.svg') }}" class="warning">
+                </div>
+                <div class="col s12">
+                    <h2 class="center-align">La page Que vous recherchez n'existe pas</h2>
+                </div>
+            </div>
+
+        </div>
+
+    {% endif %}
+
 {% endblock %}
