--- a/app/Resources/views/about/new.html.twig
+++ b/app/Resources/views/about/new.html.twig
@@ -10,14 +10,14 @@
                     <div class="col s12">
 
                         <div class="row">
-                            <h1 class="center">Nouvel à propos</h1>
+                            <h1 class="center">Je me présente</h1>
                         </div>
 
                         {{ form_start(form) }}
 
                         <div class="row">
                             <div class="col s12 m6 l3">
-                                <p>Sélection de la gallerie :</p>
+                                <p>A propos :</p>
                             </div>
                             <div class="col s12 m6 l3">
                                 {{ form_widget(form.about) }}
