--- a/app/Resources/views/partner/index.html.twig
+++ b/app/Resources/views/partner/index.html.twig
@@ -30,10 +30,10 @@
                     </div>
                     <div class="col s12 m6 l6">
                         <div class="center">
-                            <a href="{{ path('partner_edit', { 'id': about.id }) }}">
+                            <a href="{{ path('partner_edit', { 'id': partner.id }) }}">
                                 <img src="{{ asset('images/local/icons/edit.svg') }}" class="plus-icon">
                             </a>
-                            <a href="{{ path('partner_delete', { 'id': about.id }) }}">
+                            <a href="{{ path('partner_delete', { 'id': partner.id }) }}">
                                 <img src="{{ asset('images/local/icons/delete.svg') }}" class="plus-icon">
                             </a>
                         </div>
@@ -44,7 +44,7 @@
 
             <div class="row">
                 <div class="col s12 center">
-                    <a href="{{ path('about_new') }}">
+                    <a href="{{ path('partner_new') }}">
                         <img src="{{ asset('images/local/icons/plus-icon.svg') }}" class="plus-icon">
                     </a>
                 </div>
@@ -68,45 +68,4 @@
 
     {% endif %}
 
-
-
-
-
-    <h1>Partners list</h1>
-
-    <table>
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Partner</th>
-                <th>Mail</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for partner in partners %}
-            <tr>
-                <td><a href="{{ path('partner_show', { 'id': partner.id }) }}">{{ partner.id }}</a></td>
-                <td>{{ partner.partner }}</td>
-                <td>{{ partner.mail }}</td>
-                <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('partner_show', { 'id': partner.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('partner_edit', { 'id': partner.id }) }}">edit</a>
-                        </li>
-                    </ul>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <ul>
-        <li>
-            <a href="{{ path('partner_new') }}">Create a new partner</a>
-        </li>
-    </ul>
 {% endblock %}
