--- a/app/Resources/views/partner/show.html.twig
+++ b/app/Resources/views/partner/show.html.twig
@@ -2,7 +2,11 @@
 
 {% for partner in partners %}
 
-    <li class="left"><a class="grey-text text-lighten-3" href="{{ partner.mail }}">{{ partner.partner }}</a></li>
+    <li class="left">
+        <a class="grey-text text-lighten-3" href="{{ partner.mail }}">
+            {{ partner.partner }}
+        </a>
+    </li>
 
 {% endfor %}
 
