--- a/app/Resources/views/partner/show.html.twig
+++ b/app/Resources/views/partner/show.html.twig
@@ -3,7 +3,7 @@
 {% for partner in partners %}
 
     <li class="left">
-        <a class="grey-text text-lighten-3" href="{{ partner.mail }}">
+        <a class="grey-text text-lighten-3" href="{{ partner.website }}">
             {{ partner.partner }}
         </a>
     </li>
